--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -1,1 +1,54 @@
+#database
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://localhost:3306/ebuy
+spring.datasource.username=root
+spring.datasource.password=root
 
+# ===============================
+# = JPA / HIBERNATE
+# ===============================
+spring.jpa.show-sql = true
+#spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=update
+#spring.jpa.hibernate.ddl-auto=none
+#spring.jpa.hibernate.ddl-auto=create-drop
+
+#spring.jpa.hibernate.naming-strategy = org.hibernate.cfg.ImprovedNamingStrategy
+#spring.jpa.hibernate.naming-strategy = org.hibernate.cfg.
+spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
+spring.jackson.serialization.fail-on-empty-beans=false
+#hibernate.ejb.naming_strategy=org.hibernate.cfg.ImprovedNamingStrategy
+
+# ===============================
+# = CUSTOM / CONFIGURATION
+# ===============================
+spring.servlet.multipart.max-file-size=500MB
+spring.servlet.multipart.max-request-size=500MB
+#file.system.upload.base.path=C:/uploads/
+
+# ===============================
+# = SECURITY / JWT
+# ===============================
+jwt.secret=secret
+
+# ===============================
+# = EMAIL SMPT Settings
+# ===============================
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=msrourmum@gmail.com
+spring.mail.password=MahmoudSrour
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.properties.smtp.ssl.trust=smtp.gmail.com
+
+# ===============================
+# = EMAIL Templates
+# ===============================
+email.sent.from=noreplay@itweet.com
+email.template.deactivatedUser.title=Deactivation
+email.template.deactivatedUser.body=Hello ##EMAIL##,<br>This is to let you know that your account has been deactivated.<br><br>Best Regards,<br><a href="http://localhost:8080">iTweet.com</a>
+
+email.template.badPost.title=Bad Post
+email.template.badPost.body=Hello,<br>This is to let you know that ##EMAIL## has submitted a post contains bad words.To see the post <a href=http://localhost:8080/admin/pendingPosts/view/##POST_ID##>click this</a>.<br><br>Best Regards,<br><a href="http://localhost:8080">iTweet.com</a>
