--- a/web/angular.json
+++ b/web/angular.json
@@ -119,6 +119,10 @@
           }
         }
       }
-    }},
-  "defaultProject": "web"
+    }
+  },
+  "defaultProject": "web",
+  "cli": {
+    "analytics": "55c4ac76-1bc6-42d6-a349-e6e3f04502f1"
+  }
 }
