--- a/web/package.json
+++ b/web/package.json
@@ -23,6 +23,7 @@
     "angular-highcharts": "^8.0.3",
     "bootstrap": "^4.4.1",
     "bootswatch": "^4.4.1",
+    "font-awesome": "^4.7.0",
     "highcharts": "^8.0.0",
     "i": "^0.3.6",
     "jquery": "^3.4.1",
