--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 
 #database
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/ebuy
+spring.datasource.url=jdbc:mysql://localhost:3306/ebuy;
 spring.datasource.username=root
 spring.datasource.password=root
 
@@ -9,16 +9,29 @@ spring.datasource.password=root
 # = JPA / HIBERNATE
 # ===============================
 spring.jpa.show-sql = true
-spring.jpa.hibernate.ddl-auto=create-drop
+#spring.jpa.hibernate.ddl-auto=create-drop
+
 
 #spring.jpa.hibernate.ddl-auto=update
-#spring.jpa.hibernate.ddl-auto=none
+spring.jpa.hibernate.ddl-auto=none
+
 #spring.jpa.hibernate.naming-strategy = org.hibernate.cfg.ImprovedNamingStrategy
 #spring.jpa.hibernate.naming-strategy = org.hibernate.cfg.
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
 spring.jackson.serialization.fail-on-empty-beans=false
 #hibernate.ejb.naming_strategy=org.hibernate.cfg.ImprovedNamingStrategy
+
+#spring.jpa.properties.hibernate.hbm2ddl.import_files=insert-data.sql
+#spring.jpa.hibernate.hbm2ddl.import_files=/insert-data.sql
+
+
+#spring.datasource.data=/db/insert-data.sql
+
+
+#spring.jpa.properties.hibernate.hbm2ddl.import_files=insert-data.sql
+
+
 
 # ===============================
 # = CUSTOM / CONFIGURATION
