--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -1,7 +1,6 @@
-
 #database
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/ebuy;
+spring.datasource.url=jdbc:mysql://localhost:3306/ebuy
 spring.datasource.username=root
 spring.datasource.password=root
 
@@ -9,11 +8,11 @@ spring.datasource.password=root
 # = JPA / HIBERNATE
 # ===============================
 spring.jpa.show-sql = true
-#spring.jpa.hibernate.ddl-auto=create-drop
-
+spring.jpa.hibernate.ddl-auto=create-drop
+#spring.jpa.hibernate.ddl-auto=none
 
 #spring.jpa.hibernate.ddl-auto=update
-spring.jpa.hibernate.ddl-auto=none
+
 
 #spring.jpa.hibernate.naming-strategy = org.hibernate.cfg.ImprovedNamingStrategy
 #spring.jpa.hibernate.naming-strategy = org.hibernate.cfg.
