--- a/server/pom.xml
+++ b/server/pom.xml
@@ -76,6 +76,12 @@
             <version>6.1.0</version>
         </dependency>
 
+        <dependency>
+        <groupId>org.eclipse.jdt.core.compiler</groupId>
+        <artifactId>ecj</artifactId>
+        <version>4.3.1</version>
+        </dependency>
+
     </dependencies>
 
     <build>
