Implement admin/add-users page, upload storage fixes

--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -7,10 +7,10 @@ spring.datasource.password=root
 # = JPA / HIBERNATE
 # ===============================
 spring.jpa.show-sql = true
-spring.jpa.hibernate.ddl-auto=create-drop
+#spring.jpa.hibernate.ddl-auto=create-drop
 #spring.jpa.hibernate.ddl-auto=none
 
-#spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=update
 
 
 #spring.jpa.hibernate.naming-strategy = org.hibernate.cfg.ImprovedNamingStrategy
@@ -36,6 +36,10 @@ spring.jackson.serialization.fail-on-empty-beans=false
 # ===============================
 spring.servlet.multipart.max-file-size=500MB
 spring.servlet.multipart.max-request-size=500MB
+
+user.image.default.url=/uploads/profile-photo.png
+user.image.physical.base.url=/uploads/ebuy_uploads
+user.image.relative.base.url=/uploads
 #file.system.upload.base.path=C:/uploads/
 
 # ===============================
