--- a/server/pom.xml
+++ b/server/pom.xml
@@ -75,6 +75,13 @@
             <artifactId>jasperreports</artifactId>
             <version>6.1.0</version>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/com.google.guava/guava -->
+        <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+            <version>24.1.1-jre</version>
+        </dependency>
+
 
     </dependencies>
 
