--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -7,8 +7,9 @@ spring.datasource.password=root
 # = JPA / HIBERNATE
 # ===============================
 spring.jpa.show-sql = true
+
 #spring.jpa.hibernate.ddl-auto=create-drop
-#spring.jpa.hibernate.ddl-auto=none
+spring.jpa.hibernate.ddl-auto=none
 
 spring.jpa.hibernate.ddl-auto=update
 
