--- a/web/package.json
+++ b/web/package.json
@@ -29,6 +29,7 @@
     "jquery": "^3.4.1",
     "moment": "^2.24.0",
     "mongoose-paginate": "^5.0.3",
+    "ng2-search-filter": "^0.5.1",
     "ng2-validation": "^4.2.0",
     "ngx-infinite-scroll": "^8.0.1",
     "popper.js": "^1.16.1",
