--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -8,10 +8,10 @@ spring.datasource.password=root
 # ===============================
 spring.jpa.show-sql = true
 
-#spring.jpa.hibernate.ddl-auto=create-drop
-spring.jpa.hibernate.ddl-auto=none
+spring.jpa.hibernate.ddl-auto=create-drop
+#spring.jpa.hibernate.ddl-auto=none
 
-spring.jpa.hibernate.ddl-auto=update
+#spring.jpa.hibernate.ddl-auto=update
 
 
 #spring.jpa.hibernate.naming-strategy = org.hibernate.cfg.ImprovedNamingStrategy
