--- a/web/package.json
+++ b/web/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser-dynamic": "~8.2.14",
     "@angular/router": "~8.2.14",
     "@auth0/angular-jwt": "^3.0.1",
+    "@types/underscore": "^1.10.19",
     "angular-highcharts": "^8.0.3",
     "bootstrap": "^4.4.1",
     "bootswatch": "^4.4.1",
@@ -37,6 +38,7 @@
     "subsink": "^1.0.1",
     "time-ago-pipe": "^1.3.2",
     "tslib": "^1.10.0",
+    "underscore": "^1.10.2",
     "zone.js": "~0.9.1"
   },
   "devDependencies": {
