--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -1,8 +1,9 @@
+server.port=8081
 #database
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/ebuy
 spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.password=Thank@you
 # ===============================
 # = JPA / HIBERNATE
 # ===============================
@@ -11,7 +12,7 @@ spring.jpa.show-sql = true
 #spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.hibernate.ddl-auto=none
 
-spring.jpa.hibernate.ddl-auto=update
+#spring.jpa.hibernate.ddl-auto=update
 
 
 #spring.jpa.hibernate.naming-strategy = org.hibernate.cfg.ImprovedNamingStrategy
