--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -1,9 +1,9 @@
-server.port=8081
+
 #database
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/ebuy
 spring.datasource.username=root
-spring.datasource.password=Thank@you
+spring.datasource.password=root
 # ===============================
 # = JPA / HIBERNATE
 # ===============================
