--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -1,15 +1,17 @@
-#database
+
+server.port=8082
+  #database
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/ebuy
 spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.password=Thank@you
 # ===============================
 # = JPA / HIBERNATE
 # ===============================
 spring.jpa.show-sql = true
 
-spring.jpa.hibernate.ddl-auto=create-drop
-#spring.jpa.hibernate.ddl-auto=none
+#spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=none
 
 #spring.jpa.hibernate.ddl-auto=update
 
