--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -1,10 +1,10 @@
 
-server.port=8082
+
   #database
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/ebuy
 spring.datasource.username=root
-spring.datasource.password=Thank@you
+spring.datasource.password=root
 # ===============================
 # = JPA / HIBERNATE
 # ===============================
