--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -2,7 +2,7 @@
 
   #database
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/cs490-ebuy?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://localhost:3306/ebuy
 spring.datasource.username=root
 spring.datasource.password=root
 # ===============================
