Add Email Service, Add Upload Products, Reports menu

--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -64,7 +64,7 @@ spring.mail.properties.smtp.ssl.trust=smtp.gmail.com
 # ===============================
 # = EMAIL Templates
 # ===============================
-email.sent.from=noreplay@itweet.com
+email.sent.from=noreplay@eBuy.com
 email.template.deactivatedUser.title=Deactivation
 email.template.deactivatedUser.body=Hello ##EMAIL##,<br>This is to let you know that your account has been deactivated.<br><br>Best Regards,<br><a href="http://localhost:8080">iTweet.com</a>
 
