--- a/server/pom.xml
+++ b/server/pom.xml
@@ -82,6 +82,10 @@
             <version>24.1.1-jre</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-mail</artifactId>
+        </dependency>
 
         <dependency>
         <groupId>org.eclipse.jdt.core.compiler</groupId>
