Email Service, Emails for signup, approve/reject Products

--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -60,13 +60,22 @@ spring.mail.password=MahmoudSrour
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.properties.smtp.ssl.trust=smtp.gmail.com
-
 # ===============================
 # = EMAIL Templates
 # ===============================
 email.sent.from=noreplay@eBuy.com
-email.template.deactivatedUser.title=Deactivation
-email.template.deactivatedUser.body=Hello ##EMAIL##,<br>This is to let you know that your account has been deactivated.<br><br>Best Regards,<br><a href="http://localhost:8080">iTweet.com</a>
 
-email.template.badPost.title=Bad Post
-email.template.badPost.body=Hello,<br>This is to let you know that ##EMAIL## has submitted a post contains bad words.To see the post <a href=http://localhost:8080/admin/pendingPosts/view/##POST_ID##>click this</a>.<br><br>Best Regards,<br><a href="http://localhost:8080">iTweet.com</a>
+email.template.signup.successfully.title=Congratulation
+email.template.signup.successfully.body=Hello ##USER_NAME##,<br>This is to let you know that your account has been successfully registered in eBuy.<a href=http://localhost:4200/login>Click here to login</a><br>eBuy is online shopping platform. that enables user to sell,buy, and search products! <br><br>Best Regards,<br><a href="http://localhost:8080">eBuy.com</a>
+
+email.template.checkout.title=Checkout Confirmation
+email.template.checkout.body=Hello,##USER_NAME##<br>Thank you for shopping from eBuy, your order has been successfully completed.To see your orders <a href=http://localhost:4200/my-orders/##USER_ID##>click this</a>.<br><br>Best Regards,<br><a href="http://localhost:4200">eBuy.com</a>
+
+email.template.product.approved.title=Congratulation - Product Approved
+email.template.product.approved.body=Hello ##USER_NAME##,<br><br>This is to let you know that the administration department has been approved <a href=http://localhost:4200//product/##PRODUCT_ID##>your product</a><br><br>eBuy is online shopping platform. that enables user to sell,buy, and search products! <br><br>Best Regards,<br><a href="http://localhost:8080">eBuy.com</a>
+
+email.template.product.rejected.title=Product Rejected
+email.template.product.rejected.body=Hello ##USER_NAME##,<br><br>Unfortunately, the administration department has been rejected <a href=http://localhost:4200//product/##PRODUCT_ID##>your product</a><br><br>eBuy is online shopping platform. that enables user to sell,buy, and search products! <br><br>Best Regards,<br><a href="http://localhost:8080">eBuy.com</a>
+
+
+
